# littera

./: .gitattributes  .gitignore  AI.md  CLAUDE.md  CONTRIBUTING.md  DEVELOPMENT.md  INVARIANTS.md  MANIFESTO.md  README.md  pyproject.toml  pyrightconfig.json
.beads/: issues.jsonl
db/: schema.sql
db/migrations/: 0001_initial.sql  0002_add_indexes.sql
desktop/: build-dmg.sh  build.js  package-lock.json  package.json
desktop/src/: api.js  commands.js  index.html  main.js  render.js  state.js  style.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: README.md  icon.icns
desktop/tests/: editor.spec.js  entities.spec.js  fixtures.js  mentions.spec.js  navigation.spec.js  picker.spec.js  playwright.config.js  save.spec.js  serve.js
docs/: ARCHITECTURE.md  CLI.md  EDITOR.md  EMBEDDED_DB.md  LINGUISTICS.md  SCHEMA.md  design-guide.md
docs/plan/: phase1a-core.md  phase1b-tui.md  phase2-desktop.md
docs/roadmap/: README.md  phase1-semantic-editing.md  phase2-desktop.md  phase3-scale.md
ideas/: rust-rewrite.md
scripts/: build_polimorf_db.py
src/littera/: __main__.py
tests/: test_alignments.py  test_cli_commands.py  test_entities.py  test_entity_properties.py  test_invariants.py  test_linguistics.py  test_linguistics_en.py  test_phase1.py  test_polish_morphology.py  test_reviews.py
tests/tui/: conftest.py  test_editing.py  test_entities_ux.py  test_help.py  test_outline_entities_navigation.py  test_outline_navigation.py  test_outline_navigation_logic.py  test_simple_test.py
(+57 files in other folders)
