[project]
name = "littera"
version = "0.0.0"
description = "Literature meets refactoring"
requires-python = ">=3.11"

dependencies = [
  "psycopg>=3",
  "typer>=0.9",
  "rich>=13",
  "PyYAML>=6",
  "textual>=0.50",
  "inflect>=7",
]

[project.scripts]
littera = "littera.cli.app:app"

[tool.mypy]
disable_error_code = [
    "attr-defined",
    "assignment",
    "call-arg",
    "operator",
    "return-value",
]

[tool.pyright]
strict = ["type-check", "reportUnusedFunction"]
reportMissingTypeStubs = "error"
reportUnsupportedType = "error"
reportInconsistentMethodOverride = "error"
reportIncompatibleVariableOverride = "error"
reportUntypedFunctionDefinition = "error"
littera = "littera.cli.app:app"

[tool.setuptools.package-data]
"littera.linguistics" = ["data/*.db"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"